【init】初始化项目
Change-Id: I4200256da8bfa51bc3c46c7b70257ff003e18a07

--- a/app/index.html
+++ b/app/index.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>NEUQ OJ</title>
+    <title>React</title>
     <meta charset="utf-8"/>
-    <meta name="author" content="out_xu"/>
     <link rel="shortcut icon" href="./favicon.ico">
 </head>
 <body>
