--- a/app/index.html
+++ b/app/index.html
@@ -3,7 +3,7 @@
 <head>
     <title>React</title>
     <meta charset="utf-8"/>
-    <link rel="shortcut icon" href="./favicon.ico">
+    <link rel="shortcut icon" href="favicon.ico">
 </head>
 <body>
 <div id="app">
